# gazeread

./: .gitignore  README.md  calibrate_gaussian.py  calibration_matrix.yaml  camera_calibration.py  check_face_landmarks.py  checking if GT vector is correct.xlsx  cnn_integration_notes.md  environmenthatim.yml  face_model_array.py  final_reading_times.txt  gaze_tracking_utils.py  main.py  model.py  other util calibrate.py  plane_parameters.py  pyproject.toml  reading_times.txt  readme.txt  regression methods.txt  requirements.txt  test.py  test_cnn_gaze.py  utils.py  vis11.py  webcam.py
cnn/: calibration_matrix.yaml  camera_calibration.py  main.py  model.py  requirements.txt  test_wrapper.py  utils.py
eyetrax/: pyproject.toml
eyetrax/src/eyetrax/: face_model.py  gaze.py
eyetrax/src/eyetrax/calibration/: __init__.py  nine_point_cnn.py  sixteen_point.py  twenty_four_point.py
eyetrax/src/eyetrax/models/: cnn_wrapper.py
gaze-data-collection/: main.py  utils.py
gaze-data-collection/data/p00/: calibration_matrix.yaml  croppeddata.csv  data.csv  fulldata.csv
readgaze/: __main__.py
readgaze/ai/: assistant.py
readgaze/eye_tracking/: tracker.py
readgaze/gui/: main_window.py
readgaze/pdf/: document.py
weights/: cnn_wrapper_model.pkl  gaze_model.pkl  user_calibration.pkl
